Changed to using HashMaps to reduce code redundancy significantly